[package]
name = "bc4py_extention"
version = "0.1.2"
authors = ["namuyan <thhjuuATyahoo.co.jp>"]
edition = "2018"

[lib]
name = "bc4py_extension"
crate-type = ["cdylib"]

[dependencies]
blake2b_simd = "0.4.1"
etcommon-bigint = "0.2.10"
workerpool = "1.2.0"
regex = "1"
bech32 = "0.6"

[dependencies.bc4py_plotter]
# path = "../bc4py_plotter"  # for debug
git = "http://github.com/namuyan/bc4py_plotter"
branch = "master"
version = "0.1.3"

[dependencies.pyo3]
version = "0.6.0-alpha.4"
features = ["extension-module"]
